[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = "0.8"
common = { path = "../common" }
futures = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
