[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
